Fix email formatting in contact section

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <section>
     <h2>Contact</h2>
     <p>
-      Email. <a href="mailto:samuel.olayenikan@gmail.com">samuel,olayenikan@gmail.com</a><br />
+      Email. <a href="mailto:samuel.olayenikan@gmail.com">samuel.olayenikan@gmail.com</a><br />
       GitHub. <a href="https://github.com/sammoline" target="_blank">github.com/sammoline</a><br />
       LinkedIn. <a href="https://www.linkedin.com/in/samuel-oluwafemi/" target="_blank">https://www.linkedin.com/in/samuel-oluwafemi/</a>
     </p>
